--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,7 @@
 @use "./font-face";
 
+$screen-medium: 768px;
+
 *,
 *::before,
 *::after {
@@ -85,6 +87,7 @@ a {
 	color: #459db0;
 	text-decoration: none;
 	transition: all 0.1s ease;
+	pointer-events: all;
 
 	&:hover {
 		background: #459db0;
@@ -96,11 +99,29 @@ canvas {
 	height: 100vh;
 }
 
+.iframe-wrapper {
+	box-shadow: 0 0 0 2px inset $color-moss;
+	width: 100%;
+	height: 100%;
+	min-height: 70vh;
+	max-width: 2000px;
+	margin-block-start: 1rem;
+
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
+
+	& > * {
+		grid-column: 1 / 2;
+		grid-row: 1 / 2;
+	}
+}
+
 iframe {
 	width: 100%;
-	aspect-ratio: 4/3;
-	height: auto;
-	max-width: 2000px;
+	height: 100%;
+
+	z-index: 1;
 	pointer-events: all;
 }
 
@@ -146,21 +167,25 @@ iframe {
 	left: 0;
 	width: 100vw;
 	height: 100%;
-	z-index: 0;
+	z-index: 1;
 }
 
 %fixed-content {
 	padding-block: 2rem;
-	padding-inline: 1rem;
+	padding-inline: 0.5rem;
 	position: absolute;
 	text-wrap: balance;
 
-	z-index: 1;
+	z-index: 2;
 	top: 0;
 	left: 0;
 	width: 100%;
 	pointer-events: none;
 	overflow: auto;
+
+	@media (min-width: $screen-medium) {
+		padding-inline: 1rem;
+	}
 }
 
 .intro {
@@ -186,6 +211,7 @@ iframe {
 	&__content {
 		grid-row: 2/ 3;
 		pointer-events: auto;
+
 		&__container {
 			position: relative;
 			z-index: 2;
@@ -338,4 +364,38 @@ button {
 	grid-template-columns: 1fr;
 	row-gap: 0.5rem;
 	justify-items: center;
+}
+
+@keyframes l7 {
+	33% {
+		inset: -10px;
+		transform: rotate(0deg);
+	}
+	66% {
+		inset: -10px;
+		transform: rotate(90deg);
+	}
+	100% {
+		inset: 0;
+		transform: rotate(90deg);
+	}
+}
+.loader {
+	width: 40px;
+	margin-inline: auto;
+	aspect-ratio: 1;
+	color: $color-moss;
+	position: relative;
+	top: 50px;
+	background: conic-gradient(from 134deg at top, currentColor 92deg, #0000 0) top, conic-gradient(from -46deg at bottom, currentColor 92deg, #0000 0) bottom;
+	background-size: 100% 50%;
+	background-repeat: no-repeat;
+}
+.loader:before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	--g: currentColor 14.5px, #0000 0 calc(100% - 14.5px), currentColor 0;
+	background: linear-gradient(45deg, var(--g)), linear-gradient(-45deg, var(--g));
+	animation: l7 1.5s infinite cubic-bezier(0.3, 1, 0, 1);
 }
