update modal link

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -17,6 +17,9 @@ $color-black-bg: #101010;
 $color-moss: #bacabb;
 $color-white: #d7dce1;
 
+$color-moss-dark: #7ba17e;
+$color-white-x: #fbfcfd;
+
 :root {
 	font-family: doner, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
