--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -128,8 +128,13 @@ a {
 	}
 }
 
-canvas {
-	// height: 100vh;
+.game-wrapper {
+	width: 100%;
+	max-width: $max-content-width;
+	margin-inline: auto;
+	position: relative;
+	height: 100vh;
+	max-height: 1200px;
 }
 
 .iframe-wrapper {
@@ -190,7 +195,7 @@ iframe {
 }
 
 .title-container {
-	z-index: 3;
+	z-index: 4;
 }
 
 .overlay {
@@ -200,7 +205,7 @@ iframe {
 	left: 0;
 	width: 100vw;
 	height: 100%;
-	z-index: 1;
+	z-index: 2;
 }
 
 %fixed-content {
@@ -228,6 +233,7 @@ iframe {
 	grid-template-rows: clamp(4.625rem, 14vw + 1rem, 17.5rem) 1fr;
 	text-align: center;
 	justify-items: center;
+	z-index: 3;
 
 	.hero-title {
 		grid-row: 1/2;
@@ -436,4 +442,12 @@ button {
 	--g: currentColor 14.5px, #0000 0 calc(100% - 14.5px), currentColor 0;
 	background: linear-gradient(45deg, var(--g)), linear-gradient(-45deg, var(--g));
 	animation: l7 1.5s infinite cubic-bezier(0.3, 1, 0, 1);
+}
+
+.keys {
+	position: absolute;
+	bottom: 1rem;
+	left: 1rem;
+	font-size: 0.7rem;
+	z-index: 1;
 }
